# NUR-Project

./: .__synctest  .env.prod.example  .gitignore  BACKEND_CSHARP_MIGRATION_SPEC.md  Caddyfile  DEPLOY.md  DOCKER.md  NUR_SAVDO_import_tayyor.xlsx  README.md  backup_oldin.sql  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  _bootstrap_dev.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260528_01_add_user_avatars.py  20260529_01_add_order_priority_item_direction.py  20260529_02_add_product_type_name_unit.py  20260601_02_add_service_tables.py  20260601_03_add_service_categories.py  20260602_01_supply_supplier_based.py  20260603_01_phone_login_drop_email.py  20260604_01_seed_role_permissions.py  20260606_01_add_user_token_version.py  20260608_01_add_order_item_discount_usd.py  20260608_02_add_customer_is_dealer.py  20260608_03_add_order_queue_pickup.py  20260613_01_add_order_unit_uid.py  20260615_01_warehouse_product_type.py  (+33 more)
backend/app/: __init__.py  main.py
backend/scripts/: _gen_warehouse_sql.py  check_discounts.py  clean_sample_data.py  cleanup_import.sql  cleanup_orders_only.sql  delete_order.py  import_customers.sql  import_legacy.py  import_legacy.sql  import_orders.sql  import_shipping.py  legacy_data.json  sample_data.json  seed.py  seed_demo.py
backend/tests/: conftest.py  test_auth_integration.py  test_config_security.py  test_finance_void.py  test_payment_edit.py  test_permissions.py  test_security.py  test_warranty.py
(+290 files in other folders)
