[project]
name = "nur-erp-backend"
version = "0.1.0"
description = "NUR TECHNO GROUP - NurBunker ERP/CRM Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.27",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "email-validator>=2.1.0",
    "httpx>=0.27.0",
    "redis>=5.0.1",
    "celery>=5.3.6",
    "aiogram>=3.4.1",
    "openpyxl>=3.1.2",
    "reportlab>=4.1.0",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
